--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "build:dll": "webpack --config build/webpack.dll.conf.js"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.5",
+    "apollo-client": "^2.2.0",
+    "apollo-link": "^1.0.7",
+    "apollo-link-http": "^1.3.2",
     "axios": "^0.15.3",
     "babel-polyfill": "^6.23.0",
     "element-ui": "1.3.1",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "vue": "^2.3.2",
+    "vue-apollo": "^3.0.0-alpha.3",
     "vue-core-image-upload": "2.1.11",
     "vue-datasource": "1.0.9",
     "vue-quill-editor": "2.1.6",
